--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "three": "^0.160.0",
     "typescript": "^4.9.5",
