--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.6.5",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "swiper": "^11.0.5",
     "three": "^0.160.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
